--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoos": "^0.0.1-security",
-    "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
